--- a/TOS_WF/TOS_WF/TOS_WF.csproj
+++ b/TOS_WF/TOS_WF/TOS_WF.csproj
@@ -102,6 +102,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Booking.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Booking.Designer.cs">
+      <DependentUpon>Booking.cs</DependentUpon>
+    </Compile>
     <Compile Include="DAO\CategoryDAO.cs" />
     <Compile Include="DAO\DateScheduleDAO.cs" />
     <Compile Include="DAO\FilmDAO.cs" />
@@ -113,6 +119,12 @@
     </Compile>
     <Compile Include="Frames\FilmList.Designer.cs">
       <DependentUpon>FilmList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Frames\Ticket.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frames\Ticket.Designer.cs">
+      <DependentUpon>Ticket.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Categories.cs" />
     <Compile Include="Models\DateSchedule.cs" />
@@ -128,8 +140,14 @@
     <Compile Include="Theater.Designer.cs">
       <DependentUpon>Theater.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Booking.resx">
+      <DependentUpon>Booking.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frames\FilmList.resx">
       <DependentUpon>FilmList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Frames\Ticket.resx">
+      <DependentUpon>Ticket.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
