--- a/TOS_WF/TOS_WF/TOS_WF.csproj
+++ b/TOS_WF/TOS_WF/TOS_WF.csproj
@@ -118,6 +118,12 @@
     <Compile Include="DAO\ScheduleDAO.cs" />
     <Compile Include="DAO\TicketDAO.cs" />
     <Compile Include="DBConnection\DBConnection.cs" />
+    <Compile Include="Frames\ConfirmTicket.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Frames\ConfirmTicket.Designer.cs">
+      <DependentUpon>ConfirmTicket.cs</DependentUpon>
+    </Compile>
     <Compile Include="Frames\FilmList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -148,6 +154,9 @@
     <EmbeddedResource Include="Booking.resx">
       <DependentUpon>Booking.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Frames\ConfirmTicket.resx">
+      <DependentUpon>ConfirmTicket.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Frames\FilmList.resx">
       <DependentUpon>FilmList.cs</DependentUpon>
     </EmbeddedResource>
@@ -163,6 +172,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Theater.resx">
       <DependentUpon>Theater.cs</DependentUpon>
