--- a/TOS_WF/TOS_WF/TOS_WF.csproj
+++ b/TOS_WF/TOS_WF/TOS_WF.csproj
@@ -151,11 +151,11 @@
     <Compile Include="Frames\ScheduleList.Designer.cs">
       <DependentUpon>ScheduleList.cs</DependentUpon>
     </Compile>
-    <Compile Include="Frames\Ticket.cs">
+    <Compile Include="Frames\frmTicket.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Frames\Ticket.Designer.cs">
-      <DependentUpon>Ticket.cs</DependentUpon>
+    <Compile Include="Frames\frmTicket.Designer.cs">
+      <DependentUpon>frmTicket.cs</DependentUpon>
     </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -210,8 +210,8 @@
     <EmbeddedResource Include="Frames\ScheduleList.resx">
       <DependentUpon>ScheduleList.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Frames\Ticket.resx">
-      <DependentUpon>Ticket.cs</DependentUpon>
+    <EmbeddedResource Include="Frames\frmTicket.resx">
+      <DependentUpon>frmTicket.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
