--- a/TOS_WF/TOS_WF/TOS_WF.csproj
+++ b/TOS_WF/TOS_WF/TOS_WF.csproj
@@ -114,16 +114,11 @@
     <Compile Include="Areas.Designer.cs">
       <DependentUpon>Areas.cs</DependentUpon>
     </Compile>
-    <Compile Include="Booking.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Booking.Designer.cs">
-      <DependentUpon>Booking.cs</DependentUpon>
-    </Compile>
     <Compile Include="DAO\AreaDAO.cs" />
     <Compile Include="DAO\BillDAO.cs" />
     <Compile Include="DAO\BillDetailDAO.cs" />
     <Compile Include="DAO\CategoryDAO.cs" />
+    <Compile Include="DAO\CinemaDAO.cs" />
     <Compile Include="DAO\DateScheduleDAO.cs" />
     <Compile Include="DAO\FilmDAO.cs" />
     <Compile Include="DAO\GraphicsDAO.cs" />
@@ -163,12 +158,6 @@
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoginUser.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="LoginUser.Designer.cs">
-      <DependentUpon>LoginUser.cs</DependentUpon>
-    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -179,6 +168,7 @@
     <Compile Include="Models\Bill.cs" />
     <Compile Include="Models\BillDetail.cs" />
     <Compile Include="Models\Categories.cs" />
+    <Compile Include="Models\Cinema.cs" />
     <Compile Include="Models\DateSchedule.cs" />
     <Compile Include="Models\Films.cs" />
     <Compile Include="Models\Graphics.cs" />
@@ -198,9 +188,6 @@
     <EmbeddedResource Include="Areas.resx">
       <DependentUpon>Areas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Booking.resx">
-      <DependentUpon>Booking.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Frames\ConfirmTicket.resx">
       <DependentUpon>ConfirmTicket.cs</DependentUpon>
     </EmbeddedResource>
@@ -215,9 +202,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="LoginUser.resx">
-      <DependentUpon>LoginUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
@@ -241,6 +225,7 @@
     <None Include="Properties\DataSources\TOS_WF.Models.Area.datasource" />
     <None Include="Properties\DataSources\TOS_WF.Models.Bill.datasource" />
     <None Include="Properties\DataSources\TOS_WF.Models.Categories.datasource" />
+    <None Include="Properties\DataSources\TOS_WF.Models.Cinema.datasource" />
     <None Include="Properties\DataSources\TOS_WF.Models.Films.datasource" />
     <None Include="Properties\DataSources\TOS_WF.Models.Graphics.datasource" />
     <None Include="Properties\DataSources\TOS_WF.Models.Persons.datasource" />
