--- a/TOS_WF/TOS_WF/TOS_WF.csproj
+++ b/TOS_WF/TOS_WF/TOS_WF.csproj
@@ -331,6 +331,7 @@
     <Content Include="images\static\bg-red.png" />
     <Content Include="images\static\do-nhat.jpg" />
     <Content Include="images\static\logo.png" />
+    <Content Include="images\static\logout_button.png" />
     <Content Include="images\static\or.jpg" />
     <Content Include="images\static\pinky.png" />
     <Content Include="images\static\white-background-2.jpg" />
